progress on camera setting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
+    <span id="scrollProgress"></span>
     <canvas id="canvas"></canvas>
+    <div class="page">PAGE 1</div>
+    <div class="page">PAGE 2</div>
+    <div class="page">PAGE 3</div>
+    <div class="page">PAGE 4</div>
+    <div>END</div>
     <script type="module" src="main.js"></script>
 </body>
 </html>
