added some textures

--- a/index.html
+++ b/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Howard Huang</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-    </head>
+
+<head>
+    <meta charset="utf-8">
+    <title>Howard Huang</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
     <span id="scrollProgress"></span>
     <canvas id="canvas"></canvas>
-    <div class="page">PAGE 1</div>
-    <div class="page">PAGE 2</div>
-    <div class="page">PAGE 3</div>
-    <div class="page">PAGE 4</div>
-    <div>END</div>
+    <div class="page">
+        <h1>PAGE 1</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 2</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 3</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 4</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 5</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 6</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 7</h1>
+    </div>
+    <div class="page">
+        <h1>PAGE 8</h1>
+    </div>
     <script type="module" src="main.js"></script>
 </body>
+
 </html>
