--- a/workspace/index.html
+++ b/workspace/index.html
@@ -84,7 +84,23 @@
         <div class="left text">HTML, CSS, Javascript, ThreeJS, Vite (<a href="https://github.com/howardhuangxyz/howardhuangxyz.github.io">gh-repo</a>)</div>
         <div class="left text" style="padding-bottom: 10px"><a href="https://howardhuang.xyz"><img src="./images/personalwebsite.png" alt="" class="portfolio-image"/></a></div>
     </div>
-    <div class="slide finalslide"></div>
+    <div class="slide" id="finalslide">
+        <div id="finaltext">Contact me with anything interesting!</div>
+        <div id="links">
+            <a href="https://www.linkedin.com/in/howardhuang04/" target="_blank">
+                <img src="./images/linkedin.png" alt="" class="logo bottom">
+            </a>
+            <a href="mailto:howardhuang@college.harvard.edu" target="_blank">
+                <img src="./images/email.png" alt="" class="logo bottom">
+            </a>
+            <a href="https://github.com/PerpetualOwl" target="_blank">
+                <img src="./images/github.png" alt="" class="logo bottom">
+            </a>
+            <a href="https://howardhuang.xyz" target="_blank">
+                <img src="./images/website.png" alt="" class="logo bottom">
+            </a>
+        </div>
+    </div>
     <div class="page hide">
         <h1>PAGE 1</h1>
     </div>
