--- a/workspace/index.html
+++ b/workspace/index.html
@@ -82,7 +82,14 @@
         <div class="left heading">Portfolio</div>
         <div class="left subheading">Personal Website <a href="https://howardhuang.xyz">howardhuang.xyz</a></div>
         <div class="left text">HTML, CSS, Javascript, ThreeJS, Vite (<a href="https://github.com/howardhuangxyz/howardhuangxyz.github.io">gh-repo</a>)</div>
-        <div class="left text" style="padding-bottom: 10px"><a href="https://howardhuang.xyz"><img src="./images/personalwebsite.png" alt="" class="portfolio-image"/></a></div>
+        <div class="left subheading">Open Source Browser Project Website <a href="https://bonbon.exchange/">bonbon.exchange</a></div>
+        <div class="left text">HTML, CSS (<a href="https://github.com/BonBon-exchange/BonBon-exchange.github.io">gh-repo</a>)</div>
+        <div class="left text" style="padding-bottom: 10px;">
+            <div style="display: flex; height: 100px; width: 300px">
+                <a href="https://howardhuang.xyz"><img src="/assets/personalwebsite.png" alt="" class="portfolio-image"/></a>
+                <a href="https://bonbon.exchange/"><img src="/assets/bonbonwebsite.png" alt="" class="portfolio-image"/></a>
+            </div>
+        </div>
     </div>
     <div class="slide" id="finalslide">
         <div id="finaltext">Contact me with anything interesting!</div>
